--- a/templates/edit.html
+++ b/templates/edit.html
@@ -1,6 +1,18 @@
-<h1>Editing {{.Title}}</h1>
+<html>
+    <head>
+        <link rel="stylesheet" href="/content/wiki.css" />
+        <script type="text/javascript" src="/scripts/wiki.js"></script>
+    </head>
+    <body>
+        <h1>Editing {{.Title}}</h1>
 
-<form action="/save/{{.Title}}" method="POST">
-<div><textarea name="body" rows="20" cols="80">{{printf "%s" .Body}}</textarea></div>
-<div><input type="submit" value="Save"></div>
-</form>
+        <form action="/save/{{.Title}}" method="POST" onsubmit="return myConfirm();">
+            <div>
+                <textarea name="body" rows="20" cols="80">{{printf "%s" .Body}}</textarea>
+            </div>
+            <div>
+                <input type="submit" value="Save">
+            </div>
+        </form>
+    </body>
+</html>
