Add cancel button

--- a/templates/edit.html
+++ b/templates/edit.html
@@ -12,6 +12,7 @@
             </div>
             <div>
                 <input type="submit" value="Save">
+                <a href='/view/{{printf "%s" .Title}}'>Cancel</a>
             </div>
         </form>
     </body>
